# listicle.fun

./: Dockerfile  listicle.cabal  stack.yaml
src/main/haskell/Listicle/: Avatar.hs  Config.hs  Dictionary.hs  Generate.hs  ImageStore.hs  Load.hs  Name.hs  News.hs  Parse.hs  Phrase.hs  Template.hs  Types.hs  Util.hs
src/main/haskell/Listicle/Generate/: Listicle.hs
src/main/haskell/Listicle/Parse/: Dictionary.hs  Listicle.hs
src/main/haskell/Listicle/Web/: Route.hs  Template.hs
src/main/haskell/Main/: CommandLine.hs  Main.hs  Server.hs
src/main/resources/: headline.list  listicles.list  name.list  summary.list
src/main/resources/dictionary/: celebrity.json  character.json  contest.json  generation.json  holiday.json  movie.json  noun.json  phrase.json  place.json  profession.json  quality.json  state.json  store.json  website.json  year.json
src/main/resources/static/css/: basic.css  boxes.css
src/main/resources/template/: basic.tpl  boxes.tpl  container.tpl
