name:                listicle
version:             0.1.0.0
stability:           Experimental
category:            Web
author:              Ben Pence
maintainer:          github@benpence.com
build-type:          Simple
cabal-version:       >= 1.10

data-files:
  src/main/resources/dictionary/*.json
  src/main/resources/*.list
  src/main/resources/template/*.tpl
  src/main/resources/static/css/*.css
  src/main/resources/static/font/*.ttf
  src/main/resources/static/img/*.jpeg

executable listicle-server
  hs-source-dirs:             src/main/haskell/Main
  main-is:                    Server.hs

  build-depends:
      base
    , array
    , listicle
    , scotty
    , text
    , transformers

  default-language:           Haskell2010

executable listicle-command-line
  hs-source-dirs:             src/main/haskell/Main
  main-is:                    CommandLine.hs

  build-depends:
      base
    , listicle
    , MonadRandom
    , mmorph
    , text
    , transformers

  default-language:           Haskell2010

library
  hs-source-dirs:             src/main/haskell
  exposed-modules:
    Listicle.Avatar
    Listicle.Config
    Listicle.Dictionary
    Listicle.ImageStore
    Listicle.Name
    Listicle.News
    Listicle.Phrase
    Listicle.Template
    Listicle.Types
    Listicle.Util
    Listicle.Web.Route
    Paths_listicle

  build-depends:
      base
    , aeson
    , array
    , attoparsec
    , bytestring
    , containers
    , directory
    , either
    , mmorph
    , MonadRandom
    , mustache
    , random
    , scotty
    , transformers
    , text
    , yaml

  default-language:           Haskell2010
